--- a/styles/site.scss
+++ b/styles/site.scss
@@ -5,7 +5,8 @@
 @import 'statistics/index';
 @import 'obstacles/index';
 @import 'main';
-@import './legislation/main';
+@import './legislation/index';
+@import './benefit/main';
 @import './faq/main';
 @import './contact/contact';
 @import './footer/footer';
