--- a/styles/faq/_main.scss
+++ b/styles/faq/_main.scss
@@ -1,8 +1,12 @@
 @import '../utilities/vars';
 
 .faq {
-
     padding: 20px;
+
+    &-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
 
     &__heading {
         @include subheading();
@@ -10,13 +14,18 @@
     }
 
     &-section {
-        border: 2px solid #05a5ae;;
+        border: 2px solid #05a5ae;
         margin-bottom: 30px;
+
+        @media screen and (min-width: 768px) {
+            width: 50%;
+            margin: 0 auto;
+        }
     }
 
     &__q-container {
         background-color: $sea-green-lighter;
-        padding: 10px;
+        height: 70px;
     }
 
     &__letter {
@@ -24,19 +33,16 @@
         font-weight: bold;
         color: $sea-green-darker;
         padding-right: 10px;
-        width: 20%;
     }
 
     &__q {
         color: $font-color-gray;
         font-size: 20px;
         line-height: 1.4;
-        width: 80%;
     }
 
     &__a-container {
         padding: 10px;
     }
-
-
 }
+
