--- a/styles/legislation/_container.scss
+++ b/styles/legislation/_container.scss
@@ -1,11 +1,14 @@
 &-container {
     width: 100%;
     padding: 20px;
-    background-color: $background;
-    
+    @include contain();
 
     @media screen and (min-width: 768px) {
         display: flex;
         align-items: center;
+    }
+
+    @media screen and (min-width: 960px) {
+        padding: 20px 50px;
     }
 }
