--- a/styles/legislation/_heading.scss
+++ b/styles/legislation/_heading.scss
@@ -2,8 +2,12 @@
 
 &__heading {
     @include subheading();
+    color: #fff;
     text-align: left;
     padding: 0 20px;
+    margin-bottom: 0;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+    line-height: 1;
 
     @media screen and (min-width: 768px) {
         font-size: 40px;
