--- a/styles/legislation/_info.scss
+++ b/styles/legislation/_info.scss
@@ -1,10 +1,15 @@
 &__info {
     padding: 0 20px;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 1.4;
-    color: $orient;
+    color: #fff;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 
     @media screen and (min-width: 768px) {
         font-size: 25px;
+    }
+
+    @media screen and (min-width: 1224px) {
+        margin-top: 0;
     }
 }
