--- a/styles/obstacles/_container.scss
+++ b/styles/obstacles/_container.scss
@@ -1,4 +1,6 @@
 &-container {
+    @include contain();
+
     @media screen and (min-width: 768px) {
         display: flex;
         justify-content: center;
