--- a/styles/obstacles/_para.scss
+++ b/styles/obstacles/_para.scss
@@ -3,6 +3,7 @@
     font-size: 20px;
     line-height: 1.4;
     color: $font-color-gray;
+    margin-top: 10px;
 
     @media screen and (min-width: 768px) {
         font-size: 25px;
