--- a/styles/obstacles/_subheading.scss
+++ b/styles/obstacles/_subheading.scss
@@ -3,6 +3,7 @@
     line-height: 1.4;
     color: $font-color-gray;
     text-align: center;
+    margin-bottom: 0;
 
     @media screen and (min-width: 768px) {
         font-size: 36px;
