--- a/styles/statistics/_heading.scss
+++ b/styles/statistics/_heading.scss
@@ -1,5 +1,6 @@
 &__heading {
     @include subheading();
+    // max-width: 1650px;
 
     @media screen and (min-width: 768px) {
         font-size: 40px;
