Adding contact button

--- a/styles/contact/_button.scss
+++ b/styles/contact/_button.scss
@@ -9,4 +9,19 @@
     @media screen and (min-width: 768px) {
         width: 500px;
     }
+
+    &--header {
+        background-color: $orient;
+        padding: 15px;
+        border-radius: 3px;
+        width: 10rem;
+        cursor: pointer;
+        border: none;
+        margin-right: 20px;
+
+        @media screen and (min-width: 768px) {
+            width: 14rem;
+            // margin-right: 4.5rem;
+        }
+    }
 }
