--- a/styles/contact/_base.scss
+++ b/styles/contact/_base.scss
@@ -1,11 +1,12 @@
 @mixin base() {
     background-color: $background;
-    height: 275px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    // height: 275px;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
     padding: 0 20px;
+    text-align: center;
 
     @media screen and (min-width: 960px) {
         padding: 0 50px;
