--- a/styles/contact/_contact.scss
+++ b/styles/contact/_contact.scss
@@ -1,11 +1,12 @@
 .contact {
     background-color: $background;
     height: 275px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
     padding: 0 20px;
+    text-align: center;
 
     @media screen and (min-width: 960px) {
         padding: 0 50px;
@@ -26,6 +27,7 @@
         width: 275px;
         cursor: pointer;
         border: none;
+        text-align: center;
 
         @media screen and (min-width: 768px) {
             width: 500px;
@@ -45,5 +47,49 @@
 
     &__icon {
         padding-left: 8px;
+    }
+}
+
+#contact {
+    background-color: $background;
+    height: 275px;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
+    padding: 0 20px;
+    text-align: center;
+
+    @media screen and (min-width: 960px) {
+        padding: 0 50px;
+    }
+
+    &__button {
+        background-color: $orient;
+        padding: 15px;
+        border-radius: 3px;
+        width: 275px;
+        cursor: pointer;
+        border: none;
+        text-align:center;
+
+        @media screen and (min-width: 768px) {
+            width: 500px;
+        }
+    }
+
+    &--header {
+        background-color: $orient;
+        padding: 15px;
+        border-radius: 3px;
+        width: 10rem;
+        cursor: pointer;
+        border: none;
+        margin-right: 20px;
+
+        @media screen and (min-width: 768px) {
+            width: 14rem;
+            // margin-right: 4.5rem;
+        }
     }
 }
