--- a/styles/contact/_icon.scss
+++ b/styles/contact/_icon.scss
@@ -1,8 +1,18 @@
+
 &__icon {
     padding-left: 8px;
     height: 12px;
     
     @media screen and (min-width: 960px) {
         height: 18px;
+    }
+
+    &--header {
+        padding-left: 8px;
+        height: 12px;
+        
+        @media screen and (min-width: 960px) {
+            height: 18px;
+        }
     }
 }
