--- a/styles/header/_base.scss
+++ b/styles/header/_base.scss
@@ -1,4 +1,7 @@
 @mixin base() {
     background-color: #fff;
-    margin: 20px 10px;
+    margin: 20px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
