--- a/styles/header/_logo.scss
+++ b/styles/header/_logo.scss
@@ -1,8 +1,11 @@
+
 &__logo {
     width: 100px;
     height: 32px;
+    // margin-left: 0.75rem;
 
     @media screen and (min-width: 768px) {
-        margin: 20px;
+        // margin: 20px;
+        // margin-left: 4rem;
     }
 }
